--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.openurp</groupId>
     <artifactId>openurp-parent</artifactId>
-    <version>0.3.22</version>
+    <version>0.3.25</version>
   </parent>
   <groupId>org.openurp.edu.extern</groupId>
   <artifactId>openurp-edu-extern-parent</artifactId>
@@ -21,9 +21,8 @@
   </modules>
 
   <properties>
-    <openurp.app.version>0.1.34</openurp.app.version>
-    <openurp.api.version>0.14.1-SNAPSHOT</openurp.api.version>
-    <openurp.edu.web.version>0.0.37</openurp.edu.web.version>
+    <openurp.api.version>0.15.0</openurp.api.version>
+    <openurp.edu.web.version>0.1.0</openurp.edu.web.version>
   </properties>
 
 </project>
