--- a/web/pom.xml
+++ b/web/pom.xml
@@ -17,9 +17,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.openurp.app</groupId>
-      <artifactId>openurp-app-api</artifactId>
-      <version>${openurp.app.version}</version>
+      <groupId>org.beangle.ems</groupId>
+      <artifactId>beangle-ems-app_2.13</artifactId>
     </dependency>
     <dependency>
       <groupId>org.openurp.edu</groupId>
@@ -27,8 +26,8 @@
       <version>${openurp.edu.web.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.openurp.edu.base</groupId>
-      <artifactId>openurp-edu-base-tag</artifactId>
+      <groupId>org.openurp.edu</groupId>
+      <artifactId>openurp-edu-web</artifactId>
       <version>${openurp.edu.web.version}</version>
     </dependency>
     <dependency>
