--- a/certificate/pom.xml
+++ b/certificate/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.openurp.edu.extern</groupId>
     <artifactId>openurp-edu-extern-parent</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
   </parent>
   <artifactId>openurp-edu-extern-certificate</artifactId>
   <packaging>jar</packaging>
