--- a/exchange/pom.xml
+++ b/exchange/pom.xml
@@ -27,8 +27,8 @@
       <version>${openurp.api.version}</version>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
     </dependency>
   </dependencies>
 </project>
