--- a/web/pom.xml
+++ b/web/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.openurp.edu.extern</groupId>
     <artifactId>openurp-edu-extern-parent</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.4</version>
   </parent>
   <artifactId>openurp-edu-extern-web</artifactId>
   <packaging>jar</packaging>
