--- a/exchange/pom.xml
+++ b/exchange/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.openurp.edu.extern</groupId>
     <artifactId>openurp-edu-extern-parent</artifactId>
-    <version>0.0.7</version>
+    <version>0.0.8-SNAPSHOT</version>
   </parent>
   <artifactId>openurp-edu-extern-exchange</artifactId>
   <packaging>jar</packaging>
