--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.openurp</groupId>
     <artifactId>openurp-parent</artifactId>
-    <version>0.4.10</version>
+    <version>0.4.12</version>
   </parent>
   <groupId>org.openurp.edu.extern</groupId>
   <artifactId>openurp-edu-extern-parent</artifactId>
@@ -21,9 +21,9 @@
   </modules>
 
   <properties>
-    <openurp.api.version>0.22.2-SNAPSHOT</openurp.api.version>
-    <openurp.boot.version>0.0.5</openurp.boot.version>
-    <openurp.base.version>0.1.17</openurp.base.version>
+    <openurp.api.version>0.22.2</openurp.api.version>
+    <openurp.starter.version>0.0.7</openurp.starter.version>
+    <openurp.base.version>0.1.18</openurp.base.version>
   </properties>
 
 </project>
