--- a/web/pom.xml
+++ b/web/pom.xml
@@ -21,9 +21,9 @@
       <artifactId>beangle-ems-app_2.13</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.openurp.boot</groupId>
-      <artifactId>openurp-boot-web</artifactId>
-      <version>${openurp.boot.version}</version>
+      <groupId>org.openurp.starter</groupId>
+      <artifactId>openurp-starter-web</artifactId>
+      <version>${openurp.starter.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openurp.base</groupId>
